--- a/contactlist.html
+++ b/contactlist.html
@@ -23,47 +23,48 @@
 	</head>
 	<body>
 		<div class="container">
-        <div class="main clearfix">
-            <nav id="menu" class="nav">					
-                <ul>
-                    <li>
-                        <a href="#">
-                            <span>Home</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Events</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Workshops</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Exhibitions</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Sponsors</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Contacts</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="assets/img/final.png" width="80%"/>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-		</div>
+			<div class="container">
+				<div class="main clearfix">
+				<nav id="menu" class="nav">					
+					<ul>
+						<li>
+							<a href="/">
+								<span>Home</span>
+							</a>
+						</li>
+						<li>
+							<a href="events.html">
+								<span>Events</span>
+							</a>
+						</li>
+						<li>
+							<a href="workshop.html">
+								<span>Workshops</span>
+							</a>
+						</li>
+						<li>
+							<a href="exhibitions.html">
+								<span>Exhibitions</span>
+							</a>
+						</li>
+						<li>
+							<a href="sponsors.html">
+								<span>Sponsors</span>
+							</a>
+						</li>
+						<li>
+							<a href="contactlist.html">
+								<span>Contacts</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="assets/img/final.png" width="80%"/>
+							</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
 	<script>
 			//  The function to change the class
 			var changeClass = function (r,className1,className2) {
