--- a/contactprof.html
+++ b/contactprof.html
@@ -19,60 +19,48 @@
 	</head>
 	<body>
 		<div class="container">
-			 <div class="main clearfix">
-            <nav id="menu" class="nav">					
-                <ul>
-                    <li>
-                        <a href="http://plugins.compzets.com">
-                            <span class="icon">
-                                <i aria-hidden="true" class="fa fa-home"></i>
-                            </span>
-                            <span>Home</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="$('#section-2').animatescroll();">
-                            <span class="icon"> 
-                                <i aria-hidden="true" class="fa fa-crosshairs"></i>
-                            </span>
-                            <span>Events</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="$('#section-3').animatescroll();">
-                            <span class="icon">
-                                <i aria-hidden="true" class="fa fa-cog"></i>
-                            </span>
-                            <span>Workshops</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="$('#section-4').animatescroll();">
-                            <span class="icon">
-                                <i aria-hidden="true" class="fa fa-television"></i>
-                            </span>
-                            <span>Exhibitions</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="$('#section-5').animatescroll();">
-                            <span class="icon">
-                                <i aria-hidden="true" class="fa fa-money"></i>
-                            </span>
-                            <span>Sponsors</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="$('#section-6').animatescroll();">
-                            <span class="icon">
-                                <i aria-hidden="true" class="fa fa-user"></i>
-                            </span>
-                            <span>Contacts</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-		</div>
+			<div class="container">
+				<div class="main clearfix">
+				<nav id="menu" class="nav">					
+					<ul>
+						<li>
+							<a href="/">
+								<span>Home</span>
+							</a>
+						</li>
+						<li>
+							<a href="events.html">
+								<span>Events</span>
+							</a>
+						</li>
+						<li>
+							<a href="workshop.html">
+								<span>Workshops</span>
+							</a>
+						</li>
+						<li>
+							<a href="exhibitions.html">
+								<span>Exhibitions</span>
+							</a>
+						</li>
+						<li>
+							<a href="sponsors.html">
+								<span>Sponsors</span>
+							</a>
+						</li>
+						<li>
+							<a href="contactlist.html">
+								<span>Contacts</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="assets/img/final.png" width="80%"/>
+							</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
 	<script>
 			//  The function to change the class
 			var changeClass = function (r,className1,className2) {
