--- a/events.html
+++ b/events.html
@@ -27,36 +27,37 @@
 <body>
 	<!-- Main container -->
 	<div class="container">
-        <div class="main clearfix">
+        <div class="container">
+			<div class="main clearfix">
             <nav id="menu" class="nav">					
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="/">
                             <span>Home</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="events.html">
                             <span>Events</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="workshop.html">
                             <span>Workshops</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="exhibitions.html">
                             <span>Exhibitions</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="sponsors.html">
                             <span>Sponsors</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="contactlist.html">
                             <span>Contacts</span>
                         </a>
                     </li>
