--- a/exhibitions.html
+++ b/exhibitions.html
@@ -27,32 +27,32 @@
             <nav id="menu" class="nav">					
                 <ul>
                     <li>
-                        <a href="http://www.axisvnit.org">
+                        <a href="/">
                             <span>Home</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="events.html">
                             <span>Events</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="workshop.html">
                             <span>Workshops</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="exhibitions.html">
                             <span>Exhibitions</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="sponsors.html">
                             <span>Sponsors</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="contactlist.html">
                             <span>Contacts</span>
                         </a>
                     </li>
