--- a/contactlist.html
+++ b/contactlist.html
@@ -90,7 +90,7 @@
 			<div class="main">
 				<ul class="cbp-ig-grid">
 					<li>
-						<a href="#">
+						<a href="contactprof.html">
 							<i class="fa fa-gavel"></i>
 							<span class="cbp-ig-icon cbp-ig-icon-shoe"></span>
 							<h3 class="cbp-ig-title">Professor In-charge</h3>
@@ -98,7 +98,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="contactcore.html">
 							<i class="fa fa-users"></i>
 							<span class="cbp-ig-icon cbp-ig-icon-ribbon"></span>
 							<h3 class="cbp-ig-title">Core Coordinator</h3>
@@ -106,7 +106,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="contactpublicity.html">
 							<i class="fa fa-newspaper-o"></i>
 							<span class="cbp-ig-icon cbp-ig-icon-milk"></span>
 							<h3 class="cbp-ig-title">Publicity In-charge</h3>
@@ -114,7 +114,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="contactwebgraph.html">
 							<i class="fa fa-globe"></i>
 							<span class="cbp-ig-icon cbp-ig-icon-whippy"></span>
 							<h3 class="cbp-ig-title">Web and Graphics</h3>
